Halfway to proper pulse

--- a/index.html
+++ b/index.html
@@ -349,20 +349,23 @@
                  class="uk-border-circle" width=20 height=20>
             <div uk-dropdown>
                <table class="uk-table uk-table-divider uk-table-small uk-table-middle">
-                  <tr data-comment="10" data-firstdate="" data-lastdate=""> 
-                     <td class="uk-table-shrink">10</td>
+                  <tr data-comment data-count="0" data-firstdate="" data-lastdate="" 
+                     style="display: none"> 
+                     <td class="uk-table-shrink"></td>
                      <td width=20><span uk-icon="comment" ></span></td>
-                     <td>44m-55m</td>
+                     <td></td>
                   </tr>
-                  <tr data-edit="2" data-firstdate="" data-lastdate=""> 
-                     <td>2</td>
+                  <tr data-edit data-count="0" data-firstdate="" data-lastdate="" 
+                     style="display: none"> 
+                     <td></td>
                      <td><span uk-icon="file-edit" ></span></td>
-                     <td>1h-2h</td>
+                     <td></td>
                   </tr>
-                  <tr data-create data-firstdate="" data-lastdate=""> 
+                  <tr data-create data-count="0" data-firstdate="" data-lastdate="" 
+                     style="display: none"> 
                      <td></td>
                      <td><span uk-icon="file-text"></span></td>
-                     <td>5h</td>
+                     <td></td>
                   </tr>
                </table>
             </div>
