UNIFIED WATCH+PULSE

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <div class="uk-flex uk-flex-middle">
                <a href="%link%" class="uk-flex-1 uk-text-truncate pulse-name uk-text-emphasis" 
                   data-pwname="textContent">%name%</a>
-               <span data-watchcount="textContent" class="uk-label uk-label-danger"></span>
+               <span data-pwcount="textContent" class="uk-label uk-label-danger"></span>
             </div>
             <div class="uk-flex uk-flex-bottom">
                <div class="pw-users"></div>
