--- a/index.html
+++ b/index.html
@@ -402,6 +402,10 @@ function loglevel(el, replace)
             <h1 data-title="textContent"></h1>
             <p data-content="textContent" class="uk-text-break"></p>
          </div>
+         <div data-routeuser class="uk-container uk-margin-top uk-margin-bottom">
+            <h1 data-title="textContent"></h1>
+            <p data-content="textContent" class="uk-text-break"></p>
+         </div>
          <!-- ROOT discussion, holds the whole thing? -->
          <div data-discussion>
          </div>
