User pages have avatars + content

--- a/index.html
+++ b/index.html
@@ -403,7 +403,8 @@ function loglevel(el, replace)
             <p data-content="textContent" class="uk-text-break"></p>
          </div>
          <div data-routeuser class="uk-container uk-margin-top uk-margin-bottom">
-            <h1 data-title="textContent"></h1>
+            <h1 data-title="textContent" class="uk-inline"></h1>
+            <img data-avatar="src" class="uk-align-right avatar">
             <p data-content="textContent" class="uk-text-break"></p>
          </div>
          <!-- ROOT discussion, holds the whole thing? -->
